--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "element-plus": "^1.1.0-beta.9",
+    "liwenbo112": "^1.0.0",
+    "lodash": "^4.17.21",
+    "vite": "^2.3.7",
     "vue": "^3.2.6",
+    "vue-cookies": "^1.7.4",
+    "vue-grid-layout": "^2.3.12",
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
-    "@vue/compiler-sfc": "^3.2.6",
-    "vite": "^2.5.2"
+    "@vue/compiler-sfc": "^3.2.6"
   }
 }
